--- a/app/globals.css
+++ b/app/globals.css
@@ -8,3 +8,11 @@ body,
 :root {
     height: 100%;
 }
+
+
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-panee,
+.leaflet-top {
+    z-index: 0 !important;
+}
